--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1481,3 +1481,8 @@ option:not(.nohover):hover {
 option:not(.nohover) {
   background-color: var(--main-content-bg-color);
 }
+
+
+.pvzlist-wrapper {
+  display: none;
+}
