--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -23,6 +23,9 @@
                     <li class="nav-item btn-anim" role="presentation">
                         <a class="nav-link" id="contact-tab" data-toggle="tab" role="tab" data-link="@Url.ActionLink("Vk","Admin")" aria-controls="ajax">VK</a>
                     </li>
+                    <li class="nav-item btn-anim" role="presentation">
+                        <a class="nav-link" id="ozonsettings-tab" data-toggle="tab" role="tab" data-link="@Url.ActionLink("OzonSettings","Admin")" aria-controls="ajax">Ozon</a>
+                    </li>
                 </ul>
                 <div class="tab-content">
                 </div>
